--- a/pdf417MobiCustomUISample/src/main/res/values/strings.xml
+++ b/pdf417MobiCustomUISample/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Pdf417 Custom UI Demo</string>
+    <string name="app_name">Censo Resguardo Jambaló</string>
     <string name="custom_ui_roi">Custom camera activity with ROI</string>
     <string name="custom_ui">Custom camera activity</string>
     <string name="default_ui_no_dialog">Default overlay in fragment</string>
-    <string name="default_ui_no_logo">Default activity</string>
-    <string name="UseWith">Use with</string>
-    <string name="Back">Back</string>
-    <string name="LightOff">Light: off</string>
-    <string name="LightOn">Light: on</string>
+    <string name="scan_document">Escanear documento</string>
+    <string name="UseWith">Usar con:</string>
+    <string name="Back">Volver</string>
+    <string name="LightOff">Luces: apagadas</string>
+    <string name="LightOn">Luces: encendidas</string>
+    <string name="save_doc">Guardar</string>
 
 </resources>
