buttons style was implemented on main_layout and picker_data_layout

--- a/pdf417MobiCustomUISample/src/main/res/values/strings.xml
+++ b/pdf417MobiCustomUISample/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="custom_ui">Custom camera activity</string>
     <string name="default_ui_no_dialog">Default overlay in fragment</string>
     <string name="scan_document">Escanear documento</string>
+    <string name="fill_document">Digitar manualmente</string>
     <string name="UseWith">Usar con:</string>
     <string name="Back">Volver</string>
     <string name="LightOff">Luces: apagadas</string>
